2016-06-10         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Get latest from Gnulib master.
	* main.c (UPDATE_YEAR): Bump to 2016.

2016-06-09         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

	Unrelated:

	* configure.ac: Move AM_CONDITIONAL[ENABLE_EXTENSIONS] outside
	the enclosing if. Thanks to Assaf Gordon <assafgordon@gmail.com>
	for the report.

2016-06-08         Arnold D. Robbins     <arnold@skeeve.com>

	* symbol.c (lookup): If got Node_val, it's a non-variable
	in SYMTAB, return NULL. Can affect watchpoints in the debugger,
	maybe other places. Thanks to Hermann Peifer for the
	test case and report.

2016-06-05         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2016-06-01         Arnold D. Robbins     <arnold@skeeve.com>

	* nonposix.h (getpgrp): Wrap declaration in ifdef so it doesn't
	mess things up on POSIX systems (like Solaris). Thanks to
	Nelson Beebe for the report.
	* node.c (is_hex): New function to check for 0x preceded by
	optional sign.
	(r_force_number): Use it. Thanks to Mike Brennan for the report.

2016-05-30         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (arg_assign): Fully bracket ifdefs around call
	to force_number. Thanks to Andrew Schorr for pointing out
	that force_number was called only if LC_NUMERIC was defined.
	
	Lots of files: Update copyright date.

	* field.c (set_FS): Handle FS = "\0" if RS = "". Thanks to
	Janis Papanagnou for the report.

	* getopt.c, getopt.h, getopt1.c, getopt_int.h: Sync with GLIBC.

2016-05-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awk.h (get_actual_argument): Remove unused "optional" argument.
	(get_scalar_argument, get_array_argument): Change macro definition to
	remove 3rd "optional" argument.
	* ext.c (get_actual_argument): Remove unused "optional" argument.
	* gawkapi.c (api_get_argument, api_set_argument): Remove unused final