@@ -2876,8 +2876,10 @@ set_how_many:
 					leave alone, it goes into the output */
 			} else {
 				/* gawk default behavior since 1996 */
-				if (strncmp(scan, "\\\\\\&", 4) == 0) {
+				if (strncmp(scan, "\\\\\\&", 4) == 0
+				    || strncmp(scan, "\\\\\\\\", 4) == 0) {	/* 2016: fixed */
 					/* \\\& --> \& */
+					/* \\\\ --> \\ */
 					repllen -= 2;
 					scan += 3;
 				} else if (strncmp(scan, "\\\\&", 3) == 0) {
@@ -2982,10 +2984,12 @@ set_how_many:
 						*bp++ = *scan;
 					} else {
 						/* gawk default behavior since 1996 */
-						if (strncmp(scan, "\\\\\\&", 4) == 0) {
+						if (strncmp(scan, "\\\\\\&", 4) == 0
+						    || strncmp(scan, "\\\\\\\\", 4) == 0) {	/* 2016: fixed */
 							/* \\\& --> \& */
+							/* \\\\ --> \\ */
 							*bp++ = '\\';
-							*bp++ = '&';
+							*bp++ = scan[3];
 							scan += 3;
 						} else if (strncmp(scan, "\\\\&", 3) == 0) {
 							/* \\& --> \<string> */
