@@ -951,6 +951,9 @@ EXTRA_DIST = \
 	subamp.awk \
 	subamp.in \
 	subamp.ok \
+	subback.awk \
+	subback.in \
+	subback.ok \
 	subi18n.awk \
 	subi18n.ok \
 	subsepnm.awk \
@@ -1088,7 +1091,7 @@ BASIC_TESTS = \
 	reparse resplit rri1 rs rscompat rsnul1nl rsnulbig rsnulbig2 rstest1 rstest2 \
 	rstest3 rstest4 rstest5 rswhite \
 	scalar sclforin sclifin sigpipe1 sortempty sortglos splitargv splitarr splitdef \
-	splitvar splitwht strcat1 strnum1 strtod subamp subi18n \
+	splitvar splitwht strcat1 strnum1 strtod subamp subback subi18n \
 	subsepnm subslash substr swaplns synerr1 synerr2 tradanch tweakfld \
 	uninit2 uninit3 uninit4 uninit5 uninitialized unterm uparrfs \
 	wideidx wideidx2 widesub widesub2 widesub3 widesub4 wjposer1 \
