@@ -1,5 +1,11 @@
 2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>
 
+	* Makefile.am (subback): New test.
+	* subback.awk, subback.in, subback.ok: New files.
+	Thanks to Mike Brennan for the test.
+
+2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>
+
 	* Makefile.am (GAWK_EXT_TESTS): Add mixed1. Who knows
 	how long that's been broken...
 	* mixed1.ok: Adjust to match what the code produces.
