@@ -1,3 +1,8 @@
+2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* builtin.c (do_sub): Fix sub for long runs of backslashes.
+	Thanks to Mike Brennan for the report.
+
 2016-06-10         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* config.guess, config.sub: Get latest from Gnulib master.
